--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "connected-react-router": "^6.8.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
     "react-router": "^5.2.0",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.1.1",
     "typescript": "^3.7.5"
@@ -43,6 +45,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.9",
+    "@types/redux-logger": "^3.0.8",
     "@types/styled-components": "^5.1.2"
   }
 }
