database success config and work api and typescript compiles

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "module": "ES6",
+    "module": "CommonJS",
     "target": "ES2016",
     "sourceMap": false,
     "outDir": "./build",
