--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,9 @@
   "dependencies": {
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.7",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.17.1"
   },
   "type": "module"
