--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "redux-saga": "^1.1.3",
     "styled-components": "^5.1.1",
     "typescript": "^3.7.5",
+    "udid": "^0.1.4",
     "validator": "^13.1.1"
   },
   "scripts": {
