--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "watch": "tsc -w",
     "dev": "nodemon build/index.js",
-    "start": "node build/index.js"
+    "start-server": "node build/index.js"
   },
   "keywords": [],
   "author": "Turchenko",
